[tool.poetry]
name = "vecstorenn"
version = "0.1.0"
description = ""
authors = ["Frankie Robertson <frankie@robertson.name>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
numpy = ">=1.13"
lmdb = "^0.98.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
